# WireMerge

./: LICENSE  README.md
WireMerge_0.1.2/WireMerge/: CMakeLists.txt  LICENSE  README.md
WireMerge_0.1.2/WireMerge/include/libusb/: README.txt
WireMerge_0.1.2/WireMerge/src/: audio_handler.h  check_dependencies.cpp  check_dependencies.h  gui.cpp  gui.h  main.cpp  utils.h
WireMerge_0.2/WireMerge/: CMakeLists.txt
WireMerge_0.2/WireMerge/src/: adb_handler.cpp  adb_handler.h  audio_handler.cpp  audio_handler.h  gui.cpp  main.cpp  utils.h  wasapi_identity.cpp  wasapi_identity.h
WireMerge_0.4.2/WireMerge/: CMakeLists.txt
WireMerge_0.4.2/WireMerge/src/: adb_handler.cpp  adb_handler.h  audio_handler.cpp  gui.cpp  mixer.cpp  mixer.h  utils.h
WireMerge_0.4/WireMerge/: CMakeLists.txt
WireMerge_0.4/WireMerge/src/: adb_handler.cpp  adb_handler.h  gui.cpp  gui.h  utils.h
WireMerge_0.6.4/WireMerge/: CMakeLists.txt
WireMerge_0.6.4/WireMerge/include/portaudio/: README.txt
WireMerge_0.6.4/WireMerge/src/: adb_handler.cpp  audio_handler.cpp  audio_handler.h  gui.cpp  gui.h  layout.cpp  layout.h  main.cpp  usb_handler.cpp  usb_handler.h  utils.cpp  utils.h
WireMerge_0.6/WireMerge/src/: gui.cpp  gui.h  layout.cpp  layout.h  main.cpp  utils.cpp  utils.h
